--- a/four-card-feature-section-master/styles.css
+++ b/four-card-feature-section-master/styles.css
@@ -41,7 +41,7 @@ footer {
   font-size: 2.9vw;
   font-weight: 400;
   color: var(--grayish-Blue);
-  letter-spacing: -0.07rem;
+  letter-spacing: -0.07vw;
 }
 .header h1 span {
   font-weight: 600;
@@ -75,17 +75,17 @@ footer {
 }
 .attribution a { color: hsl(228, 45%, 44%); }
 
-/* Media Queries: Tablet Landscape */
-@media screen and (max-width: 1060px) {
-  .header { width:67%; }
-  .attribution { width:67%; }
-}
-
-/* Media Queries: Tabled Portrait */
-@media screen and (max-width: 768px) {
+/* Media Queries: Desktop */
+@media screen and (max-width: 1440px) {
   .header { width:100%; }
   .attribution { width:100%; }
 }
-@media (min-width: 640px) { body {font-size:1rem;} } 
-@media (min-width:960px) { body {font-size:1.2rem;} } 
-@media (min-width:1100px) { body {font-size:1.5rem;} } 
+
+/* Media Queries: Mobile */
+@media screen and (max-width: 375px) {
+  .header { width:100%; }
+  .attribution { width:100%; }
+}
+@media (min-width: 640px) { body {font-size:100vh; }}
+@media (min-width:960px) { body {font-size:100vh; }}
+@media (min-width:1100px) { body {font-size:100vh; }} 
